tests/lean/binopQuotPrecheck.lean.expected.out
binopQuotPrecheck.lean:56:41-56:42: error: Unknown identifier `a` at quotation precheck

Note: You can use `set_option quotPrecheck false` to disable this check.
binopQuotPrecheck.lean:61:49-61:50: error: Unknown identifier `a` at quotation precheck

Note: You can use `set_option quotPrecheck false` to disable this check.
binopQuotPrecheck.lean:66:51-66:52: error: Unknown identifier `a` at quotation precheck

Note: You can use `set_option quotPrecheck false` to disable this check.
